<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

<!--     <item
        android:id="@+id/action_show_filtered"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_list"
        android:title="@string/action_show_filtered"/> -->
    <item
        android:id="@+id/action_update"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_update"/>
    <item
        android:id="@+id/action_show_licenses"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/licenses"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_see_queries"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_see_queries"/>

</menu>