<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="@dimen/activity_margin"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="16dp"
	        android:gravity="center"
	        android:text="@string/welcome"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@android:color/white" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="16dp"
	        android:text="@string/intro"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:gravity="center"
	        android:textColor="@android:color/white" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="16dp"
	        android:text="@string/data_insert"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:gravity="center"
	        android:textColor="@android:color/white" />
	    
	    <EditText
	        android:id="@+id/login_username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="16dp"
	        android:hint="@string/username"
	        android:textColor="@android:color/white"
	        android:gravity="center"
	        android:textColorHint="@android:color/white" />
	
	    <EditText
	        android:id="@+id/login_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="16dp"
	        android:inputType="textPassword"
	        android:hint="@string/password"
	        android:textColor="@android:color/white"
	        android:gravity="center"
	        android:textColorHint="@android:color/white" />
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="?android:attr/selectableItemBackground"
	        android:textColor="@android:color/white"
	        android:text="@string/login"
	        android:onClick="login" />
	
	    <ProgressBar
	        android:id="@+id/progressBar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:visibility="gone" />
	
	</LinearLayout>
</ScrollView>